--- a/public/index.html
+++ b/public/index.html
@@ -10,20 +10,7 @@
       content="Web site created using create-react-app"
     />
 
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
     <!-- Google fonts -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Karla&display=swap"
-      rel="stylesheet"
-    />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap"
@@ -41,19 +28,17 @@
       crossorigin="anonymous"
     ></script>
     <title>Brian Mirabito</title>
+
+    <!-- Naker Background-->
+    <script
+      data-who="Made with naker.io"
+      src="https://d23jutsnau9x47.cloudfront.net/back/v1.0.9/viewer.js"
+      data-option="{|environment|:{|gradient|:|radial|,|sensitivity|:1,|colorStart|:[7,19,99,1],|colorEnd|:[49,68,254,1]},|particle|:{|life|:5,|power|:0.02,|texture|:|https://res.cloudinary.com/naker-io/image/upload/v1566560053/window_04.png|,|number|:202,|colorStart|:[255,255,255,0.13],|colorEnd|:[45,155,230,0.52],|sizeStart|:1.08,|sizeEnd|:2.16,|direction1|:{|x|:100,|y|:100,|z|:100},|direction2|:{|x|:-100,|y|:-100,|z|:-100}},|waterMark|:false}"
+      data-container="body"
+    ></script>
   </head>
-  <body>
+  <body style="background-color: #101018f8">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
