switched naker implementation to a compoment, created hook script, created nakerOptions file for preset background

--- a/public/index.html
+++ b/public/index.html
@@ -28,16 +28,8 @@
       crossorigin="anonymous"
     ></script>
     <title>Brian Mirabito</title>
-
-    <!-- Naker Background-->
-    <script
-      data-who="Made with naker.io"
-      src="https://d23jutsnau9x47.cloudfront.net/back/v1.0.9/viewer.js"
-      data-option="{|environment|:{|gradient|:|radial|,|sensitivity|:1,|colorStart|:[7,19,99,1],|colorEnd|:[49,68,254,1]},|particle|:{|life|:5,|power|:0.02,|texture|:|https://res.cloudinary.com/naker-io/image/upload/v1566560053/window_04.png|,|number|:202,|colorStart|:[255,255,255,0.13],|colorEnd|:[45,155,230,0.52],|sizeStart|:1.08,|sizeEnd|:2.16,|direction1|:{|x|:100,|y|:100,|z|:100},|direction2|:{|x|:-100,|y|:-100,|z|:-100}},|waterMark|:false}"
-      data-container="body"
-    ></script>
   </head>
-  <body style="background-color: #101018f8">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
