--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700;800;900&display=swap"
       rel="stylesheet"
     />
     <!-- React bootstrap link -->
